@@ -30,6 +30,32 @@ describe specl:
         expect (run_spec (yaml)).
           should_match_output "%?.*PENDING expectation 1.*issue #23.*passed unexpectedly"
 
+  - context with LuaMacro parse error in macro expansion:
+    - before:
+        tmpfile = os.tmpname ()
+        h       = io.open (tmpfile, "w")
+    - after:
+        h:close ()
+        os.remove (tmpfile)
+    - it diagnoses missing parenthesis in 'expect' call: |
+        h:write (yaml .. "\n    expect (fn (x ()).should_be {}")
+        expect (run_spec {"--color=no", tmpfile}).
+          should_contain_error (tmpfile .. ":3: parse error near 'expect'")
+    - it diagnoses spurious paretheses in 'expect' call: |
+        h:write (yaml .. " |" ..
+                 "\n    expect (fn (x ()))" ..
+                 "\n      ).should_be {}")
+        expect (run_spec {"--color=no", tmpfile}).
+          should_contain_error (tmpfile .. ":4: unexpected symbol near ')'")
+    - it diagnoses missing parentheses before 'expect' call: |
+        h:write (yaml .. "\n    garbage ( expect (1).should_be (0) foo")
+        expect (run_spec {"--color=no", tmpfile}).
+          should_contain_error (tmpfile .. ":3: ')' expected near 'foo'")
+    - it diagnoses spurious parentheses before 'expect' call: |
+        h:write (yaml .. "\n    ) expect (1).should_be (0)")
+        expect (run_spec {"--color=no", tmpfile}).
+          should_contain_error (tmpfile .. ":3: unexpected symbol near ')'")
+
   - context with Lua error in first line of example:
     - before:
         tmpfile = os.tmpname ()
